完成登录login页面静态设计

--- a/front/login/login.html
+++ b/front/login/login.html
@@ -20,15 +20,17 @@
                 <input type="password" name="password" class="itemInput">
             </div>
             <hr class="hr">
-            <button class="loginBtn">登录</button>
+            <button class="loginBtn">登&nbsp&nbsp&nbsp录</button>
         </form>
-        <a href="#">忘记密码？</a>
-        <a href="#">注册账号</a>
+        <a href="#" class="option">忘记密码？</a>
+        <a href="#" class="option option2">注册账号</a>
         <div class="exLogin">
-            <p>其他登陆方式</p>
-            <button><img src="#"></button>
-            <button><img src="#"></button>
+            <p class="exLoginTitle">其他登陆方式</p>
+            <a href="#"><img src="../res/imgs/qq.png" class="icon"></a>
+            <a href="#"><img src="../res/imgs/wechat.png" class="icon icon2"></a>
         </div>
     </div>
+    <script src="../res/js/jquery.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
